--- a/index.html
+++ b/index.html
@@ -15,6 +15,77 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <!-- navigatipn bar -->
+<!-- <div class="row">
+    <div class="twelve column"> -->
+      <div class="menu">Menu</div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />(Bottom!)
+      <!-- <nav class="fixed-nav-bar">
+        <ul class="menu-items">
+          <li><a href="food.html">Home</a></li>
+          <li><a href="food.html">Food and Drinks</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="reservations.html">Reservation</a></li>
+          <li><a href="cotact.html">Contact</a></li>
+        </ul>
+      </nav> -->
+  <!-- </div>
+</div> -->
 
     <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/functions.js"></script>
