--- a/index.html
+++ b/index.html
@@ -6,33 +6,13 @@
     <meta name="By th hills" content="By the hills hotel">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/layout1.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+    <link rel="stylesheet" href="css/main.css">
+</head>
   <body>
 
-<div class="row">
-    <div class="twelve column">
-      <div class="menu">
-      <ul class="menu-items">
-          <li><a href="food.html">Home</a></li>
-          <li><a href="food.html">Food and Drinks</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="reservations.html">Reservation</a></li>
-          <li><a href="cotact.html">Contact</a></li>
-        </ul>
-    </div>
-  </div>
-</div>
 
 
 
-    <script src="js/jquery-2.1.3.min.js"></script>
-  <script src="js/functions.js"></script>
+  <script src="js/script.js"></script>
   </body>
 </html>
