added bootstrap files and made the final grid of the website

--- a/index.html
+++ b/index.html
@@ -7,12 +7,58 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
   <body>
+    <div class="banner row">
+      <div class="col-md-12">
+        banner
+      </div>
 
+    </div>
+    <div class="row fist_section">
+      <div class="row massage">
+        <div class="col-md-6">
+          massage image
+        </div>
+        <div class="col-md-6">
+          massage textarea
+        </div>
+      </div>
+      <div class="row jacuzzi">
+        <div class="col-md-6">
+          jacuzzi textarea
+        </div>
+        <div class="col-md-6">
+          jacuzzi image
+        </div>
+      </div>
+
+
+      <div class="row second_section">
+        <div class="row rooms">
+          <div class="col-md-6">
+            rooms image
+          </div>
+          <div class="col-md-6">
+            rooms text
+          </div>
+        </div>
+        <div class="row dinner">
+          <div class="col-md-6">
+            dinner text
+          </div>
+          <div class="col-md-6">
+            dinner image
+          </div>
+        </div>
+      </div>
+
+    </div>
 
 
 
   <script src="js/script.js"></script>
+  <script src="js/bootstrap.min..js"></script>
   </body>
 </html>
