nav-bar working

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
   <body>
     <div class="banner row">
       <div class="col-md-12">
-        banner
+          <!-- nav bar -->
+          <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Food & Drinks</a></li>
+                <li><a href="#">Make Reservation</a></li>
+                <li><a href="#">Contact us</a></li>
+              </ul>
+          </div>
+        </nav>
+          <!-- nav bar end -->
       </div>
 
     </div>
@@ -57,7 +68,7 @@
     </div>
 
 
-
+<script src="js/jquery.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/bootstrap.min..js"></script>
   </body>
