styled the nav-bar to become white after a certain scroll widht

--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
     <div class="banner row">
       <div class="col-md-12">
           <!-- nav bar -->
-          <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-              <ul class="nav navbar-nav navbar-right">
+          <header>
+   <div id="custom-nav" class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+         <div class="navbar-header">
+           <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Food & Drinks</a></li>
                 <li><a href="#">Make Reservation</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
           </div>
-        </nav>
-          <!-- nav bar end -->
+        </div>
+
       </div>
+    </div>
+  </header>
+    <!-- nav bar end -->
+      <!-- caurousel start -->
+      <div class="row testing-section">
+      </div>
+      <!-- carousel end -->
 
     </div>
     <div class="row fist_section">
