--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
   <body>
-    <div class="banner row">
-      <div class="col-md-12">
-          <!-- nav bar -->
-          <header>
+            <!-- nav bar -->
+
+  <header>
    <div id="custom-nav" class="navbar navbar-default navbar-fixed-top">
       <div class="container">
          <div class="navbar-header">
@@ -29,13 +28,67 @@
       </div>
     </div>
   </header>
+
     <!-- nav bar end -->
       <!-- caurousel start -->
-      <div class="row testing-section">
-      </div>
+
+<div id="mycarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#mycarousel" data-slide-to="0"></li>
+    <li data-target="#mycarousel" data-slide-to="1"></li>
+    <li data-target="#mycarousel" data-slide-to="2"></li>
+    <li data-target="#mycarousel" data-slide-to="3"></li>
+    <li data-target="#mycarousel" data-slide-to="4"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item">
+        <img src="https://unsplash.it/2000/1250?image=397" data-color="lightblue" alt="First Image">
+        <div class="carousel-caption">
+            <h3>First Image</h3>
+        </div>
+    </div>
+    <div class="item">
+        <img src="https://unsplash.it/2000/1250?image=689" data-color="firebrick" alt="Second Image">
+        <div class="carousel-caption">
+            <h3>Second Image</h3>
+        </div>
+    </div>
+    <div class="item">
+        <img src="https://unsplash.it/2000/1250?image=675" data-color="violet" alt="Third Image">
+        <div class="carousel-caption">
+            <h3>Third Image</h3>
+        </div>
+    </div>
+    <div class="item">
+        <img src="https://unsplash.it/2000/1250?image=658" data-color="lightgreen" alt="Fourth Image">
+        <div class="carousel-caption">
+            <h3>Fourth Image</h3>
+        </div>
+    </div>
+    <div class="item">
+        <img src="https://unsplash.it/2000/1250?image=638" data-color="tomato" alt="Fifth Image">
+        <div class="carousel-caption">
+            <h3>Fifth Image</h3>
+        </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
       <!-- carousel end -->
 
-    </div>
+
     <div class="row fist_section">
       <div class="row massage">
         <div class="col-md-6">
@@ -76,9 +129,10 @@
 
     </div>
 
-
+<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
-  <script src="js/bootstrap.min..js"></script>
+
   </body>
 </html>
