--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
    <div id="custom-nav" class="navbar navbar-default navbar-fixed-top">
       <div class="container">
          <div class="navbar-header">
+
            <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Food & Drinks</a></li>
                 <li><a href="#">Make Reservation</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
+
           </div>
         </div>
 
@@ -91,7 +93,7 @@
 
     <div class="row fist_section">
       <div class="row massage">
-        <div class="col-md-6">
+        <div class="col-md-6 massage-image">
           massage image
         </div>
         <div class="col-md-6">
@@ -102,7 +104,7 @@
         <div class="col-md-6">
           jacuzzi textarea
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 jacuzzi-image">
           jacuzzi image
         </div>
       </div>
@@ -110,25 +112,27 @@
 
       <div class="row second_section">
         <div class="row rooms">
-          <div class="col-md-6">
+          <div class="col-md-6 room-image">
             rooms image
           </div>
           <div class="col-md-6">
             rooms text
           </div>
         </div>
-        <div class="row dinner">
+        <div class="row bar">
           <div class="col-md-6">
-            dinner text
+            bar text
           </div>
-          <div class="col-md-6">
-            dinner image
+          <div class="col-md-6 bar-image">
+            bar image
           </div>
         </div>
       </div>
 
     </div>
+<!-- footer start -->
 
+<!-- footer end -->
 <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
