--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
          <div class="navbar-header">
 
            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Food & Drinks</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="food.html">Food & Drinks</a></li>
                 <li><a href="#">Make Reservation</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
