--- a/food.html
+++ b/food.html
@@ -39,6 +39,126 @@
   </div>
   </div>
 <!-- banner end -->
+
+<!-- food section -->
+  <div class="row food">
+    <div class="row food-title">
+
+        <h4> foods<h4>
+          <hr>
+    </div>
+    <div class="row food1-stuff">
+      <div class="col-md-6">
+        <div class="row food1">
+          <div class="col-md-2 image-food">
+
+          </div>
+          <div class="col-md-8 food-description">
+            <h4>PEACH FRENCH TOAST </h4>
+            <hr>
+            <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+          </div>
+          <div class="col-md-2 food-price">
+            <h4>Price</h4>
+            <br>
+            <p>$15.00</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row food1">
+          <div class="col-md-2 image-food">
+
+          </div>
+          <div class="col-md-8 food-description">
+            <h4>PEACH FRENCH TOAST </h4>
+            <hr>
+            <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+          </div>
+          <div class="col-md-2 food-price">
+            <h4>Price</h4>
+            <br>
+            <p>$15.00</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row food2-stuff">
+      <div class="col-md-6">
+        <div class="row  food1">
+          <div class="col-md-2 image-food">
+
+          </div>
+          <div class="col-md-8 food-description">
+            <h4>PEACH FRENCH TOAST </h4>
+            <hr>
+            <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+          </div>
+          <div class="col-md-2 food-price">
+            <h4>Price</h4>
+            <br>
+            <p>$15.00</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row  food1">
+          <div class="col-md-2 image-food">
+
+          </div>
+          <div class="col-md-8 food-description">
+            <h4>PEACH FRENCH TOAST </h4>
+            <hr>
+            <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+          </div>
+          <div class="col-md-2 food-price">
+            <h4>Price</h4>
+            <br>
+            <p>$15.00</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row food3-stuff">
+      <div class="col-md-6">
+        <div class="row  food1">
+          <div class="col-md-2 image-food">
+
+          </div>
+          <div class="col-md-8 food-description">
+            <h4>PEACH FRENCH TOAST </h4>
+            <hr>
+            <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+          </div>
+          <div class="col-md-2 food-price">
+            <h4>Price</h4>
+            <br>
+            <p>$15.00</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row  food1">
+          <div class="col-md-2 image-food">
+
+          </div>
+          <div class="col-md-8 food-description">
+            <h4>PEACH FRENCH TOAST </h4>
+            <hr>
+            <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+          </div>
+          <div class="col-md-2 food-price">
+            <h4>Price</h4>
+            <br>
+            <p>$15.00</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- food section end -->
 <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
