--- a/food.html
+++ b/food.html
@@ -159,6 +159,35 @@
     </div>
   </div>
 <!-- food section end -->
+
+<!-- start of dinner party section -->
+  <div class="row dinner-party">
+    <div class="col-md-2">
+
+    </div>
+    <div class="col-md-8 ">
+      <div class="row dinner-party-text">
+      <h4>Today's Dinner special</h4>
+    </div>
+    <br><br><br>
+      <div class="row dinner-stuff">
+        <div class="col-md-4 dinner-party-text-image">
+        </div>
+        <div class="col-md-4 dinner-party-text2">
+      <h5>It's Valentine's special! All meals are 20% off!!</h5>
+      <p>The best dressed couple gets a free meal and a free ride home</p>
+      </div>
+      <div class="col-md-4 dinner-party-text-time">
+      <h4>Time</p>
+        <p>1900 Hrs</p>
+      </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+
+    </div>
+  </div>
+<!-- end of dinner party section -->
 <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
