finished with the today's special section

--- a/food.html
+++ b/food.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- googe fonts start -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -167,18 +168,23 @@
     </div>
     <div class="col-md-8 ">
       <div class="row dinner-party-text">
+        <br><br><br><br>
       <h4>Today's Dinner special</h4>
+      <br><br><br>
+      <hr style="width:50%;">
     </div>
-    <br><br><br>
+    <br><br><br><br><br><br><br>
       <div class="row dinner-stuff">
         <div class="col-md-4 dinner-party-text-image">
         </div>
         <div class="col-md-4 dinner-party-text2">
-      <h5>It's Valentine's special! All meals are 20% off!!</h5>
+      <h5>It's Valentine's special!</h5>
+      <hr style="width:40%;">
+      <h2> All meals are 20% off!!</h2>
       <p>The best dressed couple gets a free meal and a free ride home</p>
       </div>
       <div class="col-md-4 dinner-party-text-time">
-      <h4>Time</p>
+      <h2>Time</h2>
         <p>1900 Hrs</p>
       </div>
       </div>
