through with the food sections

--- a/food.html
+++ b/food.html
@@ -194,6 +194,130 @@
     </div>
   </div>
 <!-- end of dinner party section -->
+<!-- start of drinks section -->
+<div class="row drinks">
+  <div class="row drinks-title">
+
+      <h4> Drinks<h4>
+        <hr>
+  </div>
+  <div class="row drink1-stuff">
+    <div class="col-md-6">
+      <div class="row drink1">
+        <div class="col-md-2 image-drink">
+
+        </div>
+        <div class="col-md-8 drink-description">
+          <h4>Capucinno</h4>
+          <hr>
+          <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+        </div>
+        <div class="col-md-2 drink-price">
+          <h4>Price</h4>
+          <br>
+          <p>$5.00</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row drink1">
+        <div class="col-md-2 image-drink">
+
+        </div>
+        <div class="col-md-8 drink-description">
+          <h4>PEACH FRENCH TOAST </h4>
+          <hr>
+          <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+        </div>
+        <div class="col-md-2 drink-price">
+          <h4>Price</h4>
+          <br>
+          <p>$15.00</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row drink2-stuff">
+    <div class="col-md-6">
+      <div class="row drink1">
+        <div class="col-md-2 image-drink">
+
+        </div>
+        <div class="col-md-8 drink-description">
+          <h4>PEACH FRENCH TOAST </h4>
+          <hr>
+          <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+        </div>
+        <div class="col-md-2 drink-price">
+          <h4>Price</h4>
+          <br>
+          <p>$15.00</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row drink1">
+        <div class="col-md-2 image-drink">
+
+        </div>
+        <div class="col-md-8 drink-description">
+          <h4>PEACH FRENCH TOAST </h4>
+          <hr>
+          <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+        </div>
+        <div class="col-md-2 drink-price">
+          <h4>Price</h4>
+          <br>
+          <p>$15.00</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row drink3-stuff">
+    <div class="col-md-6">
+      <div class="row drink1">
+        <div class="col-md-2 image-drink">
+
+        </div>
+        <div class="col-md-8 drink-description">
+          <h4>PEACH FRENCH TOAST </h4>
+          <hr>
+          <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+        </div>
+        <div class="col-md-2 drink-price">
+          <h4>Price</h4>
+          <br>
+          <p>$15.00</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row drink1">
+        <div class="col-md-2 image-drink">
+
+        </div>
+        <div class="col-md-8 drink-description">
+          <h4>PEACH FRENCH TOAST </h4>
+          <hr>
+          <p>Honey pecan butter, maple syrup and breakfast sausage</p>
+        </div>
+        <div class="col-md-2 drink-price">
+          <h4>Price</h4>
+          <br>
+          <p>$15.00</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of drinks section -->
+<!-- jazz event section start -->
+  <div class="row jazz">
+
+  </div>
+<!-- jazz event section end -->
 <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
