--- a/food.html
+++ b/food.html
@@ -314,8 +314,31 @@
 </div>
 <!-- end of drinks section -->
 <!-- jazz event section start -->
-  <div class="row jazz">
+  <div class="row open-mic">
+    <div class="col-md-5">
 
+    </div>
+    <div class="col-md-7">
+      <div class="row open-mic-title">
+        <br><br><br>
+      <h2>Have A drink while you enjoy the open-mic session</h2>
+      <hr style="width:90%;">
+    </div>
+    <div class="row open-mic-description">
+      <div class="col-md-4 open-mic-image">
+
+      </div>
+      <div class="col-md-6 open-mic-sales">
+        <h3>Tickets Going for 200 sh each</h3>
+
+      </div>
+      <div class="col-md-2 open-mic-time">
+        <h4>Time</h4>
+        <br>
+        <p>2200 Hrs</p>
+      </div>
+    </div>
+    </div>
   </div>
 <!-- jazz event section end -->
 <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
