--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
            <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="food.html">Food & Drinks</a></li>
-                <li><a href="#">Make Reservation</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="reservations.html">Make Reservation</a></li>
+
+
               </ul>
 
           </div>
