--- a/reservations.html
+++ b/reservations.html
@@ -24,7 +24,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="food.html">Food & Drinks</a></li>
               <li><a href="reservations.html">Make Reservation</a></li>
-              <li><a href="#">Contact</a></li>
+
             </ul>
 
         </div>
@@ -34,6 +34,58 @@
   </div>
 </header>
 
+<!-- banner start -->
+<div class="row reservation-banner">
+  <h4>Make a reservation</h4>
+
+  <hr style="width:50%;">
+  <div class="col-md-8  reservation-select">
+    <div class="row">
+      <div class="col-md-3">
+      <p>choose rooms</p>
+      <div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Rooms<span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Couples rooms</a></li>
+    <li><a href="#">Single rooms</a></li>
+    <li><a href="#">Family rooms</a></li>
+  </ul>
+</div>
+      </div>
+      <div class="col-md-3">
+        <p>period of staying</p>
+        <div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  Days<span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+
+      <li><a href="#">1 Day</a></li>
+      <li><a href="#">One week</a></li>
+      <li><a href="#">One Month</a></li>
+    </ul>
+  </div>
+      </div>
+      <div class="col-md-6">
+        <br><br>
+        <div class="input-group">
+       <input type="text" class="form-control" placeholder="Your email address..">
+       <span class="input-group-btn">
+         <button class="btn btn-default" type="button">Send</button>
+       </span>
+     </div>
+  </div>
+
+
+  </div>
+
+
+    </div>
+  </div>
+</div>
+<!-- banner end -->
 
 
 <script src="js/jquery.min.js"></script>
