styled the second section too

--- a/index.html
+++ b/index.html
@@ -101,17 +101,21 @@
           massage textarea
         </div>
       </div>
-      <div class="row jacuzzi">
-        <div class="col-md-6">
-          jacuzzi textarea
-        </div>
-        <div class="col-md-6 jacuzzi-image">
-          jacuzzi image
+    </div>
+
+      <div class="row second_section">
+        <div class="row jacuzzi">
+          <div class="col-md-6">
+            jacuzzi textarea
+          </div>
+          <div class="col-md-6 jacuzzi-image">
+            jacuzzi image
+          </div>
         </div>
       </div>
 
 
-      <div class="row second_section">
+      <div class="row third_section">
         <div class="row rooms">
           <div class="col-md-6 room-image">
             rooms image
@@ -120,17 +124,21 @@
             rooms text
           </div>
         </div>
-        <div class="row bar">
-          <div class="col-md-6">
-            bar text
           </div>
-          <div class="col-md-6 bar-image">
-            bar image
+          <div class="row fourth_section">
+            <div class="row bar">
+              <div class="col-md-6">
+                bar text
+              </div>
+              <div class="col-md-6 bar-image">
+                bar image
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-    </div>
+
+
+
 <!-- footer start -->
 
 <!-- footer end -->
