added bar image..trying out parallax next

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
   <body>
             <!-- nav bar -->
@@ -97,20 +100,27 @@
         <div class="col-md-6 massage-image">
           massage image
         </div>
-        <div class="col-md-6">
-          massage textarea
+        <div class="col-md-6 massage-text">
+          <br><br>
+
+          <h2>Get started by being served with  the best Massage</h2>
+          <hr>
+          <br>
+          <div class="massage-details">
+          <p>Here at BYTHEHILLS, we believe in giving the warmest welcome to our gusts</p>
+          <br>
+          <p>get served with the best massage for as our welcome for your stay at bythehills hotel</p>
+          <br>
+        </div>
+
         </div>
       </div>
     </div>
 
       <div class="row second_section">
         <div class="row jacuzzi">
-          <div class="col-md-6">
-            jacuzzi textarea
-          </div>
-          <div class="col-md-6 jacuzzi-image">
-            jacuzzi image
-          </div>
+
+
         </div>
       </div>
 
