--- a/index.html
+++ b/index.html
@@ -95,61 +95,77 @@
       <!-- carousel end -->
 
 <main>
-            <section class="module content">
-                  <div class="container">
-                    <div class="row massage">
-                      <div class="col-md-6 massage-image">
-                        massage image
-                      </div>
-                      <div class="col-md-6 massage-text">
-                        <br><br>
+  <div class="row">
+<section class="module content">
+        <!-- <div class="container"> -->
+          <div class="row massage">
+            <div class="col-md-6 massage-image">
+              massage image
+            </div>
+            <div class="col-md-6 massage-text">
+              <br><br>
 
-                        <h2>Get started by being served with  the best Massage</h2>
-                        <hr>
-                        <br>
-                        <div class="massage-details">
-                        <p>Here at BYTHEHILLS, we believe in giving the warmest welcome to our gusts</p>
-                        <br>
-                        <p>get served with the best massage for as our welcome for your stay at bythehills hotel</p>
-                        <br>
-                      </div>
+              <h2>Get started by being served with  the best Massage</h2>
+              <hr>
+              <br>
+              <div class="massage-details">
+              <p>Here at BYTHEHILLS, we believe in giving the warmest welcome to our gusts</p>
+              <br>
+              <p>get served with the best massage for as our welcome for your stay at bythehills hotel</p>
+              <br>
+            </div>
 
-                      </div>
-                    </div>
-                  </div>
-                </section>
-
+            </div>
+          <!-- </div> -->
+        </div>
+      </section>
+</div>
                 <section class="module parallax parallax-2">
                   <div class="container">
-                    <h1>Rise</h1>
+                    <!-- <h1>Rise</h1> -->
                   </div>
                 </section>
 
                 <section class="module content">
-                  <div class="container">
-                    <h2>Lorem Ipsum Dolor</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil consequuntur, nesciunt dicta, esse rem ducimus itaque quis. Adipisci ullam nam qui illum debitis sit ad in delectus, repudiandae non dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis, facere aliquid itaque tempore consequatur nihil sint enim aliquam id saepe magnam totam repellat placeat a fugit nulla molestias voluptas.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta cum distinctio eum asperiores rem enim fugit eaque voluptas est laboriosam in repudiandae architecto placeat, illum atque quasi explicabo, culpa, molestias!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptas, aperiam quae provident, recusandae rem quis. Ut quaerat, quasi iste voluptate et dolorem atque sed neque voluptates, molestias dolor enim!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam odit tempore, quibusdam impedit deserunt. Natus quisquam, facilis numquam, molestias nesciunt modi, at debitis maxime sunt et quo quas labore perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus laborum doloremque recusandae, debitis maxime a! Nihil distinctio ex, cumque tempore ea voluptas omnis odit, quaerat natus nam excepturi corporis!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eius harum atque unde nihil aut quam provident sunt, iste error vitae suscipit dolores cupiditate totam, eum quae alias! Dicta, nisi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate beatae impedit officia quis odit rerum sequi, explicabo commodi illum suscipit, tempore eum doloremque quae obcaecati tempora quidem neque sapiente modi?</p>
+                  <div class="row">
+
+                    <div class="col-md-6 room-text">
+                      <br><br><br>
+                      <h2 style="font-family: 'Pacifico', cursive;color:rgb(70, 87, 13);">We have rooms for everyone</h2>
+                      <hr style="width:70%;">
+                      <div class="row singles">
+                        <div class="col-md-6 desc">
+                        <p>Single Room</p>
+                        </div>
+                        <div class="col-md-4 payment">
+
+                          <p>Ksh. 900 per night</p>
+                        </div>
+                      </div>
+                      <div class="row couples">
+                        <div class="col-md-6 desc">
+                        <p>Couple's Room</p>
+                        </div>
+                        <div class="col-md-4 payment">
+                          <p>Ksh. 1200 per night</p>
+
+                        </div>
+                      </div>
+                      <div class="row family">
+                        <div class="col-md-6 desc">
+                        <p>Family Room</p>
+                        </div>
+                        <div class="col-md-4 payment">
+                          <p>Ksh. 2000 per night</p>
+
+                        </div>
+                      </div>
+                  </div>
+                  <div class="col-md-6 room-image">
                   </div>
                 </section>
 
-                <section class="module parallax parallax-3">
-                  <div class="container">
-                    <h1>Calm</h1>
-                  </div>
-                </section>
 
-                <section class="module content">
-                  <div class="container">
-                    <h2>Lorem Ipsum Dolor</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil consequuntur, nesciunt dicta, esse rem ducimus itaque quis. Adipisci ullam nam qui illum debitis sit ad in delectus, repudiandae non dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis, facere aliquid itaque tempore consequatur nihil sint enim aliquam id saepe magnam totam repellat placeat a fugit nulla molestias voluptas.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta cum distinctio eum asperiores rem enim fugit eaque voluptas est laboriosam in repudiandae architecto placeat, illum atque quasi explicabo, culpa, molestias!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptas, aperiam quae provident, recusandae rem quis. Ut quaerat, quasi iste voluptate et dolorem atque sed neque voluptates, molestias dolor enim!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam odit tempore, quibusdam impedit deserunt. Natus quisquam, facilis numquam, molestias nesciunt modi, at debitis maxime sunt et quo quas labore perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus laborum doloremque recusandae, debitis maxime a! Nihil distinctio ex, cumque tempore ea voluptas omnis odit, quaerat natus nam excepturi corporis!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eius harum atque unde nihil aut quam provident sunt, iste error vitae suscipit dolores cupiditate totam, eum quae alias! Dicta, nisi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate beatae impedit officia quis odit rerum sequi, explicabo commodi illum suscipit, tempore eum doloremque quae obcaecati tempora quidem neque sapiente modi?</p>
-                  </div>
-                </section>
 
             </main><!-- /main -->
 
