--- a/index.html
+++ b/index.html
@@ -170,7 +170,16 @@
             </main><!-- /main -->
 
 <!-- footer start -->
+<footer>
+  <div class="row footer">
+    <div class="col-md-6 footer-text">
+      <h4>Developed by Victor Gichohi</h4>
+      <br>
+      <p>Web | mobile Developer</p>
+    </div>
+  </div>
 
+</footer>
 <!-- footer end -->
 <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="js/jquery.min.js"></script>
