--- a/index.html
+++ b/index.html
@@ -50,32 +50,32 @@
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
-    <div class="item">
-        <img src="https://unsplash.it/2000/1250?image=397" data-color="lightblue" alt="First Image">
+    <div class="item banner-swimming">
+        <!-- <img src="images/banner1.jpg" data-color="lightblue" alt="First Image"> -->
         <div class="carousel-caption">
             <h3>First Image</h3>
         </div>
     </div>
-    <div class="item">
-        <img src="https://unsplash.it/2000/1250?image=689" data-color="firebrick" alt="Second Image">
+    <div class="item banner-rooms">
+        <!-- <img src="images/banner2.jpg" data-color="firebrick" alt="Second Image"> -->
         <div class="carousel-caption">
             <h3>Second Image</h3>
         </div>
     </div>
-    <div class="item">
-        <img src="https://unsplash.it/2000/1250?image=675" data-color="violet" alt="Third Image">
+    <div class="item banner-bar">
+        <!-- <img src="images/banner3.jpg" data-color="violet" alt="Third Image"> -->
         <div class="carousel-caption">
             <h3>Third Image</h3>
         </div>
     </div>
-    <div class="item">
-        <img src="https://unsplash.it/2000/1250?image=658" data-color="lightgreen" alt="Fourth Image">
+    <div class="item banner-hike">
+        <!-- <img src="images/banner4.jpg" data-color="lightgreen" alt="Fourth Image"> -->
         <div class="carousel-caption">
             <h3>Fourth Image</h3>
         </div>
     </div>
-    <div class="item">
-        <img src="https://unsplash.it/2000/1250?image=638" data-color="tomato" alt="Fifth Image">
+    <div class="item banner-chef">
+        <!-- <img src="images/banner5.jpg" data-color="tomato" alt="Fifth Image"> -->
         <div class="carousel-caption">
             <h3>Fifth Image</h3>
         </div>
@@ -174,7 +174,7 @@
   <div class="row footer">
     <div class="col-md-6 footer-text">
       <br>
-      
+
       <h4>Developed by Victor Gichohi</h4>
       <br>
       <p>Web | mobile Developer</p>
