--- a/index.html
+++ b/index.html
@@ -53,37 +53,37 @@
     <div class="item banner-swimming">
         <!-- <img src="images/banner1.jpg" data-color="lightblue" alt="First Image"> -->
         <div class="carousel-caption">
-          <h1>Explore Our Worldclass Swimming Pool </h1>
+          <h1 class="bannerh1">Explore Our Worldclass Swimming Pool </h1>
 
-            <h3>Get The Best View while you enjoy the swimming pool</h3>
+            <h3 class="bannerh3">Get The Best View while you enjoy the swimming pool</h3>
         </div>
     </div>
     <div class="item banner-rooms">
         <!-- <img src="images/banner2.jpg" data-color="firebrick" alt="Second Image"> -->
         <div class="carousel-caption">
 
-          <h1>We offer The best comfort with the best services</h1>
-            <h3>Room service is available 24/7</h3>
+          <h1 class="bannerh1">We offer The best comfort with the best services</h1>
+            <h3 class="bannerh3">Room service is available 24/7</h3>
         </div>
     </div>
     <div class="item banner-bar">
         <!-- <img src="images/banner3.jpg" data-color="violet" alt="Third Image"> -->
         <div class="carousel-caption">
-          <h1>Expore drinks with the best bar tenders</h1>
-            <h3>Free beer with every bottle of vodks</h3>
+          <h1 class="bannerh1">Expore drinks with the best bar tenders</h1>
+            <h3 class="bannerh3">Free beer with every bottle of vodks</h3>
         </div>
     </div>
     <div class="item banner-hike">
         <!-- <img src="images/banner4.jpg" data-color="lightgreen" alt="Fourth Image"> -->
         <div class="carousel-caption">
-          <h1>Get to explore the hills on your stay here.</h1>
-            <h3>get to hike with your bike.</h3>
+          <h1 class="bannerh1">Get to explore the hills on your stay here.</h1>
+            <h3 class="bannerh3">get to hike with your bike.</h3>
         </div>
     </div>
     <div class="item banner-chef">
         <!-- <img src="images/banner5.jpg" data-color="tomato" alt="Fifth Image"> -->
         <div class="carousel-caption">
-          <h1>We get the best chefs in the world from the best schools.</h1>
+          <h1 class="bannerh1">We get the best chefs in the world from the best schools.</h1>
             <!-- <h3>Fifth Image</h3> -->
         </div>
     </div>
