--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
   <body>
             <!-- nav bar -->
@@ -54,8 +55,9 @@
         <!-- <img src="images/banner1.jpg" data-color="lightblue" alt="First Image"> -->
         <div class="carousel-caption">
           <h1 class="bannerh1">Explore Our Worldclass Swimming Pool </h1>
-
+            <br>
             <h3 class="bannerh3">Get The Best View while you enjoy the swimming pool</h3>
+            <hr style="width:70%;">
         </div>
     </div>
     <div class="item banner-rooms">
@@ -63,21 +65,27 @@
         <div class="carousel-caption">
 
           <h1 class="bannerh1">We offer The best comfort with the best services</h1>
+            <br>
             <h3 class="bannerh3">Room service is available 24/7</h3>
+            <hr style="width:40%;">
         </div>
     </div>
     <div class="item banner-bar">
         <!-- <img src="images/banner3.jpg" data-color="violet" alt="Third Image"> -->
         <div class="carousel-caption">
           <h1 class="bannerh1">Expore drinks with the best bar tenders</h1>
+            <br>
             <h3 class="bannerh3">Free beer with every bottle of vodks</h3>
+            <hr style="width:50%;">
         </div>
     </div>
     <div class="item banner-hike">
         <!-- <img src="images/banner4.jpg" data-color="lightgreen" alt="Fourth Image"> -->
         <div class="carousel-caption">
           <h1 class="bannerh1">Get to explore the hills on your stay here.</h1>
+          <br>
             <h3 class="bannerh3">get to hike with your bike.</h3>
+            <hr style="width:30%;">
         </div>
     </div>
     <div class="item banner-chef">
