added some css files

--- a/index.html
+++ b/index.html
@@ -20,25 +20,21 @@
    <div id="custom-nav" class="navbar navbar-default navbar-fixed-top">
       <div class="container">
          <div class="navbar-header">
-
-           <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="food.html">Food & Drinks</a></li>
                 <li><a href="reservations.html">Make Reservation</a></li>
-
-
-              </ul>
-
-          </div>
+          </ul>
         </div>
-
+   
+        </div>
+  
       </div>
-    </div>
-  </header>
+   
+</header>
 
     <!-- nav bar end -->
       <!-- caurousel start -->
-
 <div id="mycarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -107,7 +103,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-      <!-- carousel end -->
+ <!-- carousel end -->
 
 <main>
   <div class="row">
